--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -27,7 +27,9 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
+    "gmail-send": "^1.8.14",
     "lucide-react": "^0.376.0",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
