--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.376.0",
     "nodemailer": "^6.9.13",
     "react": "^18.2.0",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.0",
