--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -2,10 +2,11 @@
   "name": "online-store-project",
   "version": "1.0.0",
   "description": "bling-boutique",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "node api/index.js",
+    "dev": "node api/index.js"
   },
   "type": "module",
   "author": "",
