--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/index.js",
+    "build": "npm run build",
     "dev": "node api/index.js"
   },
   "type": "module",
